# DAWG-Python

./: .coveragerc  .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES.md  CHANGES.rst  README.md  README.rst  _prepare_dev_data.py  bench.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-tests.yml
bench/: speed.py  utils.py
dawg_python/: __init__.py  dawgs.py  units.py  wrapper.py
dev_data/: dawg.dawg  record_dawg.dawg
dev_data/large/: bytes_dawg.dawg  int_dawg.dawg
dev_data/small/: bytes.dawg  completion.dawg  int_completion_dawg.dawg  int_dawg.dawg  prediction-record.dawg  prediction.dawg  record.dawg
tests/: test_dawg.py  test_fuzzy.py  test_payload_dawg.py  test_prediction.py  utils.py
